<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.coppernic.sample.barcode.BarcodeFragment"
    tools:showIn="@layout/activity_barcode">

    <Button
        android:id="@+id/btnOpen"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/open"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/btnFirm"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/get_firmware"
        app:layout_constraintLeft_toRightOf="@+id/btnOpen"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/btnScan"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/scan"
        app:layout_constraintLeft_toRightOf="@+id/btnFirm"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txtLog"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="7dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:fadeScrollbars="false"
        android:gravity="bottom"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnGetSym"/>

    <Button
        android:id="@+id/btnGetParam"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/get_param"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOpen"/>

    <Button
        android:id="@+id/btnSetParam"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/set_param"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGetParam"/>

    <Button
        android:id="@+id/btnClear"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="7dp"
        android:text="@string/clear"
        app:layout_constraintLeft_toRightOf="@+id/btnScan"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Spinner
        android:id="@+id/spinnerSetParam"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnSetParam"
        app:layout_constraintLeft_toRightOf="@+id/btnSetParam"
        app:layout_constraintTop_toTopOf="@+id/btnSetParam"
        android:layout_marginStart="8dp"/>

    <EditText
        android:id="@+id/txtSetParam"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/btnSetParam"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/spinnerSetParam"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="@+id/btnSetParam"
        app:layout_constraintVertical_bias="0.333"/>

    <Spinner
        android:id="@+id/spinnerGetParam"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/btnGetParam"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnGetParam"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="@+id/btnGetParam"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"/>

    <Button
        android:id="@+id/btnGetSym"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/get_sym"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSetParam"
        android:layout_marginStart="8dp"/>

    <Spinner
        android:id="@+id/spinnerGetSym"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/btnGetSym"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="@+id/btnGetSym"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnGetSym"
        android:layout_marginBottom="8dp"/>

</android.support.constraint.ConstraintLayout>
